# encoders-and-semantic-seg

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: ade20k_full_name_ndx_to_train_id.json  base.yaml  encoder_clip.yaml  encoder_dinov2.yaml  encoder_mae.yaml  mask2former_ade20k_full_semseg.yaml  mask2former_voc.yaml  mask2former_voc_finetune.yaml  mask2former_voc_frozen.yaml
docs/: colab.md  setup.md
encoders/: clip.py  dinov2.py  mae.py  vit_backbone.py  vit_neck.py  vit_pyramid.py  vit_utils.py
experiments/: evaluate.py  prepare_ade20k_full_semseg_from_hf.py  run_experiment.py  test_backbone_taps.py  train.py  train_mask2former.py
utils/: __init__.py  data.py  logging.py  metrics.py  register_voc.py
